@@ -1392,7 +1392,7 @@
       <arg name='style' type='xsltStylesheetPtr' info='the stylesheet '/>
     </function>
     <function name='xsltSaveResultToFilename' file='xsltutils'>
-      <info>Save the result result obtained by applying the style stylesheet to a file or URL URL</info>
+      <info>Save the result result obtained by applying the style stylesheet to a file or URL</info>
       <return type='int' info='the number of byte written or -1 in case of failure. '/>
       <arg name='URI' type='const char *'/>
       <arg name='result' type='xmlDocPtr' info='the result xmlDocPtr '/>
