@@ -9,6 +9,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-root
 URL: http://xmlsoft.org/XSLT/
 Requires: libxml2 >= @LIBXML_REQUIRED_VERSION@
 BuildRequires: libxml2-devel >= @LIBXML_REQUIRED_VERSION@
+BuildRequires: python python-devel
 Prefix: %{_prefix}
 Docdir: %{_docdir}
 
@@ -30,6 +31,22 @@ This C library allows to transform XML files into other XML files
 mechanism. To use it you need to have a version of libxml2 >= 2.3.8
 installed.
 
+%package python
+Summary: Python bindings for the libxslt library
+Group: Development/Libraries
+Requires: libxslt = %{version}
+Requires: libxml2 >= @LIBXML_REQUIRED_VERSION@
+Requires: python
+
+%description python
+The libxslt-python package contains a module that permits applications
+written in the Python programming language to use the interface
+supplied by the libxslt library to apply XSLT transformations.
+
+This library allows to parse sytlesheets, uses the libxml2-python
+to load and save XML and HTML files. Direct access to XPath and
+the XSLT transformation context are possible to extend the XSLT language
+with XPath functions written in Python.
 %prep
 %setup -q
 
@@ -63,6 +80,24 @@ install -d $RPM_BUILD_ROOT%{_mandir}/man1
 install -d $RPM_BUILD_ROOT%{_mandir}/man4
 make prefix=$RPM_BUILD_ROOT%{prefix} mandir=$RPM_BUILD_ROOT%{_mandir} install
 
+#
+# this is a bit ugly but tries to generate the bindings for all versions
+# of python installed
+for i in %{prefix}/include/python*
+do
+    py_version=`echo $i | sed "s+%{prefix}/include/python++"`
+    if test -x %{prefix}/bin/python$py_version
+    then
+        echo generating bindings for Python $py_version
+	(cd python ; make clean ; \
+         make PYTHON="%{prefix}/bin/python$py_version" \
+	      PYTHON_VERSION="$py_version"; \
+         make PYTHON="%{prefix}/bin/python$py_version" \
+	      PYTHON_VERSION="$py_version" \
+	      prefix=$RPM_BUILD_ROOT%{prefix} \
+	      mandir=$RPM_BUILD_ROOT%{_mandir} install)
+    fi
+done
 %clean
 rm -rf $RPM_BUILD_ROOT
 
@@ -89,6 +124,15 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/include/*
 %{prefix}/bin/xslt-config
 %{prefix}/lib/pkgconfig/libxslt.pc
+%files python
+%defattr(-, root, root)
+
+%{prefix}/lib/python*/site-packages/libxslt.py
+%{prefix}/lib/python*/site-packages/_libxslt.so
+%doc python/TODO
+%doc python/libxsltclass.txt
+%doc python/tests/*.py
+
 
 %changelog
 
