@@ -1,5 +1,5 @@
-from libxml2 import *
 import _libxslt
+from libxml2 import *
 
 #
 # Everything below this point is automatically generated
